(Unstable) Connected to API. Minor UI improvements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">StockGazer</string>
+    <string name="most_active_stock">Most Active Stock</string>
+    <string name="follow_list">Follow List</string>
+    <string name="top_market_movers">Top Market Movers</string>
 </resources>
